--- a/src/Header.css
+++ b/src/Header.css
@@ -1,18 +1,49 @@
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Cinzel+Decorative:wght@400;700&family=Lato:wght@400;700&family=Playfair+Display:wght@400;700&display=swap');
+
+.logo-img{
+  width: 5em;
+  height: 4.7em;
+  border-radius: 50%;
+}
+
+.profiles-pic {
+  width: 4rem;
+  height: 4rem;
+  border: 2px solid #ccc;
+  border-radius: 50%;
+}
+.profile-section .profiles-img{
+  width: 4rem;
+  height: 4rem;
+
+}
+
+.container-header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
 .breadcrumb-header {
-    background-color: #f5f5f5;
-    padding: 10px 20px;
+    padding: 0;
+    display: flex;
+    background-color: #fff;
     border-bottom: 1px solid #ddd;
+    height: 5em;
+    justify-content: space-between;
+    align-items: center;
   }
   
   .breadcrumb-header h1 {
-    font-family: 'Cambria', serif;
-    font-size: 24px;
+    font-family: 'Cinzel Decorative', serif;
+    font-size: 30px;
     margin: 0;
     color: #333;
   }
   
   .breadcrumb-nav {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 16px;
     color: #666;
     margin-top: 5px;
@@ -26,4 +57,8 @@
     color: #333;
     font-weight: bold;
   }
-  
+  @media (max-width: 480px) {
+    .location h1{
+      font-size: 1.5em;
+    }
+  }
