--- a/src/Home.css
+++ b/src/Home.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Cinzel+Decorative:wght@400;700&family=Lato:wght@400;700&family=Playfair+Display:wght@400;700&display=swap');
+
+
 /* General Styles */
 body {
   font-family: Arial, sans-serif;
@@ -20,7 +23,23 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 20px;
+  margin-right: 10px;
+}
+
+.rating {
+  font-size: 1rem;
+  font-weight: 500;
+  text-align: center;
+  color: #e67e22; /* Orange for rating text */
+  display: flex;
+  align-items: center;
+}
+.rating .rating-value {
+  margin-left: 5px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.1rem;
+  color: #f39c12; /* Slightly darker orange for the rating value */
 }
 
 .profile-link {
@@ -30,29 +49,31 @@ body {
 
 .profile-pic {
   position: relative;
-  width: 10rem;
-  height: 10rem;
+  width: 4.8rem;
+  height: 4.8rem;
   border-radius: 50%;
   overflow: hidden;
   border: 2px solid #ddd;
 }
 
-.profile-img {
-  width: 10rem;
-  height: 10rem;
+.profile-section .profile-img {
+  width: 4.8rem;
+  height: 4.8rem;
   object-fit: cover;
 }
 
 .profile-completion-overlay {
   position: absolute;
   bottom: 0;
-  left: 0;
+  right: 0;
   width: 100%;
-  height: 20px;
+  height: 60%;
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
+  opacity: 1;
+ 
 }
 
 .completion-bar {
@@ -64,9 +85,11 @@ body {
 }
 
 .completion-text {
-  font-size: 10px;
+  font-size: 12px;
   color: white;
   font-weight: bold;
+  width: 70%;
+  
 }
 
 .dashboard {
@@ -85,6 +108,10 @@ body {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   position: relative;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.hello{
+  font-family: 'Playfair Display', serif;
+  margin-bottom: 1em;
 }
 
 .dashboard-item:hover {
@@ -110,7 +137,7 @@ body {
 }
 
 .profile-completion-overlay .completion-text {
-  opacity: 0;
+  opacity: 1;
   transition: opacity 0.3s ease;
 }
 
@@ -134,6 +161,8 @@ button {
   transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
   font-size: 0.9rem;
   text-align: center;
+  align-items: center;
+  justify-content: center;
   flex: 1;
 }
 
@@ -151,9 +180,14 @@ button {
 
 /* Add to Wishlist Button */
 .add-to-wishlist-button {
+  display: flex;
   background-color: #28a745;
   color: white;
   margin-top: 0.6em;
+  justify-content: center;
+  align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .add-to-wishlist-button:hover {
@@ -268,6 +302,7 @@ button {
 
 .section h2 {
   margin-bottom: 15px;
+  font-family: 'Playfair Display', serif;
   font-size: 24px;
   color: #444;
 }
@@ -286,9 +321,10 @@ button {
   background-color: #fff;
   padding: 15px;
   border-radius: 8px;
+  font-family: 'Lato', sans-serif;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   flex: 1;
-  min-width: 200px;
+  min-width: 320px;
   cursor: pointer;
   transition: transform 0.3s, box-shadow 0.3s;
 }
@@ -367,9 +403,11 @@ button {
 .dashboard-item .label {
   display: block;
   margin-bottom: 10px;
+  font-family: 'Lato', sans-serif;
 }
 
 .dashboard-item .value {
+  font-family: 'Lato', sans-serif;
   display: block;
   font-size: 1.5em;
   font-weight: bold;
@@ -421,9 +459,12 @@ button {
     flex-direction: column;
     align-items: center;
   }
+  .book-card{
+    min-width: 200px;
+  }
 
   .ad {
-    width: 80%;
+    width: 100%;
   }
 
   .ads-title {
@@ -443,6 +484,7 @@ button {
   }
   .profile-completion-overlay .completion-text {
     opacity: 1;
+    font-size: 10px;
   }
 
 }
@@ -452,10 +494,12 @@ button {
   .ads-container {
     flex-direction: column;
     align-items: center;
+    width: 100%;
+    gap: 1rem;
   }
 
   .ad {
-    width: 90%;
+    width: 100%;
   }
 
   .ads-title {
@@ -477,6 +521,7 @@ button {
 
   .profile-completion-overlay .completion-text {
     opacity: 1;
+    font-size: 10px;
   }
 }
 
@@ -529,13 +574,13 @@ button {
   }
 
   .profile-pic {
-    width: 8rem;
-    height: 8rem;
+    width: 4rem;
+    height: 4rem;
     border: 2px solid #ccc;
   }
-  .profile-img{
-    width: 7rem;
-    height: 7rem;
+  .profile-section .profile-img{
+    width: 4rem;
+    height: 4rem;
 
   }
 }
@@ -544,13 +589,13 @@ button {
 @media (max-width: 480px) {
 
   .profile-pic {
-    width: 7rem;
-    height: 7rem;
+    width: 4rem;
+    height: 4rem;
     border: 2px solid #ccc;
   }
   .profile-img{
-    width: 7rem;
-    height: 7rem;
+    width: 4rem;
+    height: 4rem;
 
   }
 
@@ -561,7 +606,7 @@ button {
   }
 
   .completion-bar {
-    height: 6px;
+    height: 5px;
   }
 
   .dashboard-item .label {
