--- a/src/Notifications.css
+++ b/src/Notifications.css
@@ -1,5 +1,6 @@
 .notification {
   position: fixed;
+  display: flex;
   top: 10px;
   right: 10px;
   padding: 15px 20px;
@@ -8,6 +9,14 @@
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   z-index: 1000;
   animation: slideIn 0.3s ease;
+  align-items: center;
+  gap: 1em;
+}
+
+.notification-img{
+  width: 2.5em;
+  height: 2.5em;
+  border-radius: 50%;
 }
 
 @keyframes slideIn {
@@ -33,6 +42,7 @@
 
 .notification.error {
   background-color: #dc3545;
+  color: white;
 }
 
 .notification button {
