--- a/src/Wishlist.css
+++ b/src/Wishlist.css
@@ -11,10 +11,28 @@
   max-width: 1200px;
 }
 
+.wishlist-loaders {
+  width: 24px;
+  height: 24px;
+  border: 4px solid rgba(255, 255, 255, 0.3);
+  border-top: 4px solid #e60000;
+  border-radius: 50%;
+  
+  animation: spin 1s linear infinite;
+  margin-left: 10px;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
 .wishlist-page h2 {
   margin-bottom: 20px;
   text-align: center;
   width: 100%;
+  font-family: 'Playfair Display', serif;
   font-size: 32px;
   font-weight: bold;
   color: #333;
@@ -49,6 +67,7 @@
 .wishlist-item p {
   margin: 0;
   font-size: 18px;
+  font-family: 'Cinzel', serif;
   color: #333;
   flex: 2;
 }
@@ -64,7 +83,7 @@
   justify-content: flex-end;
 }
 
-.move-to-cart-button, .remove-from-wishlist-button {
+.move-to-cart-button, .remove-from-wishlist-button, .unavailable-button {
   padding: 8px 12px;
   border: none;
   border-radius: 5px;
@@ -85,6 +104,9 @@
 .move-to-cart-button {
   color: #28a428;
 }
+.unavailable-button{
+  color: #6c757d;
+}
 
 .move-to-cart-button:hover {
   background-color: rgba(40, 164, 40, 0.1);
@@ -97,6 +119,10 @@
 
 .remove-from-wishlist-button:hover {
   background-color: rgba(230, 0, 0, 0.1);
+  transform: translateY(-2px);
+}
+.unavailable-button:hover{
+  background-color: rgba(108, 117, 125, 0.1); /* Light gray with transparency */
   transform: translateY(-2px);
 }
 
@@ -175,7 +201,8 @@
 
 .empty-wishlist-message img {
   max-width: 100%;
-  height: auto;
+  width: 30rem;
+  height: 30rem;
   object-fit: cover;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -191,6 +218,7 @@
   }
 
   .empty-wishlist-message img {
-    max-width: 80%;
+    max-width: 90%;
+    height: auto;
   }
 }
