--- a/src/CompleteProfile.css
+++ b/src/CompleteProfile.css
@@ -42,7 +42,7 @@
   margin-bottom: 1rem;
 }
 
-h2 {
+.complete-profile-container h2 {
   font-size: 1.5rem;
   margin-bottom: 1.5rem;
   color: #081b29;
