--- a/src/Books.css
+++ b/src/Books.css
@@ -1,22 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Cinzel+Decorative:wght@400;700&family=Lato:wght@400;700&family=Playfair+Display:wght@400;700&display=swap');
 
-/* General Styles */
-body {
-  font-family: Arial, sans-serif;
-  background-color: white;
-  color: #333;
-}
 
 .container {
-  width: 100vw;
+  width: 90vw;
   margin: 0 auto;
-  
   align-items: center;
   justify-items: center;
   margin-bottom: 120px;
 }
 
-/* Search Area */
 .search-area {
   display: flex;
   justify-content: center;
@@ -66,17 +58,17 @@ body {
   color: #333;
 }
 
-/* Text Container */
+
 .text-container {
-  font-family: 'Roboto', sans-serif; /* Modern, clean font */
-  color: #333; /* Dark gray for primary text */
+  font-family: 'Roboto', sans-serif;
+  color: #333;
   line-height: 1.6;
 }
 
 .text-container .rating {
   font-size: 1rem;
   font-weight: 500;
-  color: #e67e22; /* Orange for rating text */
+  color: #e67e22;
   display: flex;
   align-items: center;
 }
@@ -85,12 +77,12 @@ body {
   margin-left: 5px;
   font-weight: bold;
   font-size: 1.1rem;
-  color: #f39c12; /* Slightly darker orange for the rating value */
+  color: #f39c12;
 }
 
 
 
-/* Recommendation Area */
+
 .recommendation-section {
   margin-bottom: 40px;
 }
@@ -112,11 +104,14 @@ body {
   display: none;
 }
 
-/* Sell a Book Section */
+
 .sell-book-section {
-  max-width: 600px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 90vw;
   margin: 0 auto;
-  padding: 2em;
+
   background-color: #f9f9f9;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -137,7 +132,7 @@ body {
 }
 
 .input-field {
-  width: 100%;
+  width: 90%;
   padding: 0.75em 1em;
   border-radius: 5px;
   border: 1px solid #ccc;
@@ -206,7 +201,6 @@ body {
   justify-content: center;
 }
 
-/* Book Cards */
 .book-cardy {
   background-color: #fff;
   padding: 15px;
@@ -241,7 +235,7 @@ body {
   position: relative;
   display: inline-block;
   font-size: 1.2em;
-  color: #ccc; /* Grey background stars */
+  color: #ccc;
   margin-right: 8px;
 }
 
@@ -252,15 +246,15 @@ body {
   white-space: nowrap;
   overflow: hidden;
   width: 0;
-  color: #f39c12; /* Yellow filled stars */
+  color: #f39c12;
 }
 
 .stars-outer::before {
-  content: "★★★★★"; /* 5 empty stars */
+  content: "★★★★★";
 }
 
 .stars-inner::before {
-  content: "★★★★★"; /* 5 filled stars (visible based on width) */
+  content: "★★★★★";
 }
 
 .rating-text {
@@ -391,7 +385,6 @@ body {
   }
 }
 
-/* Error/Success Messages */
 .error-message {
   color: red;
   margin-top: 10px;
@@ -402,9 +395,9 @@ body {
   margin-top: 10px;
 }
 
-/* Responsive Styles */
 
-/* For screens with max-width of 720px */
+
+
 @media (max-width: 720px) {
   .container {
       width: 90%;
@@ -482,5 +475,4 @@ body {
   }
 }
 
-/* For screens with max-width of 480px */
 
