--- a/src/Books.css
+++ b/src/Books.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Cinzel+Decorative:wght@400;700&family=Lato:wght@400;700&family=Playfair+Display:wght@400;700&display=swap');
 
 
-.container {
+.bbok-container {
   width: 90vw;
   margin: 0 auto;
   align-items: center;
