--- a/src/UserProfile.css
+++ b/src/UserProfile.css
@@ -15,98 +15,14 @@
   transition: all 0.3s ease;
 }
 
-.dummy-page {
+.user-profile{
+  width: 90vw;
+  margin-bottom: 7em;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: top;
-  height: 100vh;
-  background-color: #f5f5f5;
-  color: #333;
-  text-align: center;
-  font-family: 'Arial', sans-serif;
-  padding: 20px;
+  justify-content: center;
+  flex-direction: column;
 }
-
-.dummy-page .content-container {
-  width: 400px;
-  background-color: #fff;
-  padding: 40px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
-}
-
-.dummy-page h1 {
-  font-size: 2em;
-  color: #081b29;
-  margin-bottom: 20px;
-}
-
-.dummy-page p {
-  font-size: 1.1em;
-  color: #555;
-  margin-bottom: 30px;
-}
-
-.dummy-page .login-button,
-.dummy-page .signup-button {
-  width: 100%;
-  max-width: 200px;
-  padding: 10px 20px;
-  margin: 10px auto;
-  font-size: 1em;
-  border: none;
-  border-radius: 25px;
-  cursor: pointer;
-  transition: background-color 0.3s ease, box-shadow 0.3s ease;
-}
-
-.dummy-page .login-button {
-  background-color: #4caf50; /* Green for login */
-  color: white;
-}
-
-.dummy-page .signup-button {
-  background-color: #081b29; /* Dark blue for signup */
-  color: white;
-}
-
-/* Button Hover States */
-.dummy-page .login-button:hover {
-  background-color: #388e3c; /* Darker green on hover */
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Add shadow effect */
-}
-
-.dummy-page .signup-button:hover {
-  background-color: #062a40; /* Darker blue on hover */
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-}
-
-/* Responsive Design */
-@media (max-width: 768px) {
-  .dummy-page .content-container {
-    width: 100%;
-    padding: 20px;
-  }
-  .dummy-page{
-    justify-content: center;
-  }
-
-  .dummy-page h1 {
-    font-size: 1.8em;
-  }
-
-  .dummy-page p {
-    font-size: 1em;
-  }
-
-  .dummy-page .login-button,
-  .dummy-page .signup-button {
-    max-width: 180px;
-    font-size: 0.9em;
-  }
-}
-
 
 /* Animation for the container when it loads */
 @keyframes fadeIn {
@@ -450,11 +366,13 @@
   align-items: center;
   gap: 1.5rem; /* Adds space between image and text */
   padding: 1.5rem;
+  width: 90vw;
   background-color: #f9f9f9;
   border-radius: 10px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   max-width: 600px;
   margin: 2rem auto;
+
 }
 
 /* Profile Image Styling */
@@ -501,6 +419,7 @@
 @media (max-width: 768px) {
   .profile-header {
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     padding: 1rem;
   }
