--- a/src/Home.css
+++ b/src/Home.css
@@ -464,6 +464,7 @@ button {
   border: 2px solid #e0e0e0;
   border-radius: 10px;
   padding: 20px;
+  max-width: 23vw;
   background-color: white;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -502,7 +503,15 @@ button {
   transition: background-color 0.3s ease;
 }
 
-.btn-shop-now:hover, .btns-shop-now:hover {
+.btn-shop-now{
+  background-color: #1976d2;
+}
+
+.btn-shop-now:hover{
+  background-color: #1565c0;
+}
+
+.btns-shop-now:hover {
   background-color: #388e3c;
 }
 
@@ -534,6 +543,7 @@ button {
 
   .ads {
     margin-bottom: 20px;
+    width: 100vw;
   }
 }
 
