--- a/src/Wishlist.css
+++ b/src/Wishlist.css
@@ -56,6 +56,14 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 20px;
+} 
+
+.h2{
+  width: 100%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 20px;
 }
 
 .wishlist-item {
@@ -197,11 +205,6 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  padding: 40px 20px;
-  background-color: #f0f4f8;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  margin-top: 50px;
 }
 
 .empty-wishlist-message p {
